# retail_app

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  README.md  alembic.ini  build_image.sh  configrc  entrypoint.sh  requirements-direct.txt  requirements-lock.txt  requirements-test.txt  run_server.py  sample.py  setup.cfg  setup.py  test_configrc  tox.ini  uwsgi.ini
alembic/: env.py
alembic/versions/: 56d643fb858d_create_department_table.py  709928329178_add_description_to_models.py  e34724d39597_create_location_table.py  eb299b93d272_add_remaining_models.py
data/: Full-Stack-Data.csv  test.csv
etc/retailstore/: auth-paste.ini  config-generator.conf  no-auth-paste.ini  retailstore-paste.ini  retailstore.conf.sample  test_retailstore.conf
images/retailstore/: Dockerfile
retailstore/: cmd.py  errors.py  server.py  util.py
retailstore/cli/: curry.py  run.py
retailstore/cli/commands/: __init__.py  base.py  csv_import.py  find_skus.py
retailstore/conf/: config.py
retailstore/control/: api.py  auth.py  auth_token.py  base.py  categories.py  departments.py  health.py  hiera.py  locations.py  sub_categories.py  things.py
retailstore/db/migration/: alembic.ini  cli.py
retailstore/db/sqlalchemy/: api.py  base.py  models.py  query_generator.py
retailstore/middleware/: jwt.py
retailstore/serializers/: schemas.py
tests/functional/: test_gabbi.py
tests/functional/gabbits/: health_resource.yaml  location_collection_resource.yaml  (+1 more)
tests/unit/: test_api_things.py
tools/: functional-tests.sh  resetdb.sh
(+9 files in other folders)
