[metadata]
name = retailstore
summary = Retail Store Rest Api
description-file =
    README.md
author = 'Vamsi'
author-email = vamsi.skrishna@gmail.com
home-page = https://github.com/code-R/retail_app
classifier =
    Environment :: Inmar
    Intended Audience :: Inmar
    License :: MIT
    Programming Language :: Python :: 3.6

[files]
packages =
    retailstore

[entry_points]
console_scripts =
    db-manage = retailstore.db.migration.cli:main
oslo.config.opts =
    retailstore.conf = retailstore.conf.config:list_opts
